--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-environ==0.8.1
 django-filer==2.1.2
 django-formtools==2.3
 django-js-asset==2.0.0
+django-markdownify==0.9.1
 django-mptt==0.13.4
 django-polymorphic==3.0.0
 django-sekizai==3.0.1
