--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 #tldr -> inside virtual env: pip install -r requirements.txt
 #addition to Readme
 
-
 asgiref==3.5.0
+bleach==4.1.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -40,13 +40,18 @@ elementpath==2.5.0
 environ==1.0
 html5lib==1.1
 idna==3.3
+importlib-metadata==4.11.3
 importlib-resources==5.6.0
 lxml==4.8.0
+Markdown==3.3.7
+mock==4.0.3
 mockdjangosaml2==0.16.1
 mysqlclient==2.1.0
+packaging==21.3
 Pillow==9.1.0
 pycparser==2.21
 pyOpenSSL==22.0.0
+pyparsing==3.0.9
 pysaml2==7.1.2
 python-dateutil==2.8.2
 pytz==2021.3
@@ -63,4 +68,3 @@ webencodings==0.5.1
 wincertstore==0.2
 xmlschema==1.9.2
 zipp==3.7.0
-django-markdownify==0.9.1
