--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -5,29 +5,50 @@ on:
     branches: [ actions, main ]
   pull_request:
     branches: [ main ]
-  label:
-    types: [created]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
-    env:
-      DB_NAME=uoop_pi
-      DB_HOST=127.0.0.1
-      DB_PORT=3306
-      DB_USER=root
-      DB_PASSWORD=bolero123
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.7]
+
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: zergling
+          MYSQL_DATABASE: mysql
+        ports: ['3306:3306']
+
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python $
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: $
     - name: Install Dependencies
       run: |
-        # python3 -m pip install --upgrade pip
+        # python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Run Migrations
+      run: python manage.py migrate
+      env: 
+        DBENGINE: django.db.backends.mysql
+        DBNAME: mysql
+        DBUSER: root
+        DBPASSWORD: zergling
+        DBHOST: 127.0.0.1
+        DBPORT: $
     - name: Run Tests
       run: |
-        python3 manage.py test .\app\tests\
+        python manage.py test .\app\tests\
+      env: 
+        DBENGINE: django.db.backends.mysql
+        DBNAME: mysql
+        DBUSER: root
+        DBPASSWORD: zergling
+        DBHOST: 127.0.0.1
+        DBPORT: $
