--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -25,10 +25,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python $
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: $
+        python-version: 3.7
     - name: Install Dependencies
       run: |
         # python -m pip install --upgrade pip
@@ -41,7 +41,7 @@ jobs:
         DBUSER: root
         DBPASSWORD: zergling
         DBHOST: 127.0.0.1
-        DBPORT: $
+        DBPORT: 3306
     - name: Run Tests
       run: |
         python manage.py test .\app\tests\
@@ -51,4 +51,4 @@ jobs:
         DBUSER: root
         DBPASSWORD: zergling
         DBHOST: 127.0.0.1
-        DBPORT: $
+        DBPORT: 3306
