--- a/.github/workflows/meeting_reminder.yaml
+++ b/.github/workflows/meeting_reminder.yaml
@@ -1,50 +1,34 @@
 name: Meeting reminder
 
 on:
-  push:
-    branches: [actions] #preko crona napravit
+  schedule:
+    - cron: "45 16 * * 5" #run this action every friday at 16:45
 
 
 jobs:
   action:
     runs-on: ubuntu-latest
     steps:
-    - name: Send mail
+    - name: Send meeting reminder email
       uses: dawidd6/action-send-mail@v3
       with:
         # Required mail server address:
-        server_address: smtp.gmail.com
+        server_address: rijeka.riteh.hr
         # Required mail server port:
         server_port: 465
         # Optional (recommended): mail server username:
-        # username: ${{secrets.MAIL_USERNAME}}
+        username: ${{secrets.EMAIL_USERNAME}}
         # Optional (recommended) mail server password:
-        # password: ${{secrets.MAIL_PASSWORD}}
+        password: ${{secrets.EMAIL_PASSWORD}}
         # Required mail subject:
         subject: Project Meeting Reminder
         # Required recipients' addresses:
-        to: bornaparo@gmail.com #,yoda@example.com
-        # Required sender full name (address can be skipped):
-        from: no-reply # <user@example.com>
-        # Optional whether this connection use TLS (default is true if server_port is 465)
+        to: bornaparo@gmail.com,luka.skrlj6@gmail.com,kristijanfajdeticcro@gmail.com,anthea.zubcic@gmail.com
+        from: no-reply
         secure: true
         # Optional plain body:
-        body: Meeting for project in subject Software Engineering starts in 15 minutes.
-        # Optional HTML body read from file:
-        # html_body: file://README.html
-        # Optional carbon copy recipients:
-        # cc: kyloren@example.com,leia@example.com
-        # Optional blind carbon copy recipients:
-        # bcc: r2d2@example.com,hansolo@example.com
-        # Optional recipient of the email response:
-        # reply_to: luke@example.com
-        # Optional Message ID this message is replying to:
-        # in_reply_to: <random-luke@example.com>
-        # Optional unsigned/invalid certificates allowance:
+        body: Meeting for project in subject Software Engineering starts in 15 minutes (17:00).
         ignore_cert: true
         # Optional converting Markdown to HTML (set content_type to text/html too):
         convert_markdown: true
-        # Optional attachments:
-        # attachments: attachments.zip,git.diff,./dist/static/*.js
-        # Optional priority: 'high', 'normal' (default) or 'low'
-        priority: low
+        priority: normal
